[gd_scene load_steps=12 format=3 uid="uid://dciutmggheven"]

[ext_resource type="Script" path="res://scenes/game/gameplay.gd" id="1_gck8e"]
[ext_resource type="PackedScene" uid="uid://dlrmlfrpnrkcu" path="res://scenes/objects/board.tscn" id="2_7sxhf"]
[ext_resource type="PackedScene" uid="uid://gbg1fq05vnj5" path="res://scenes/objects/token.tscn" id="2_08wbk"]
[ext_resource type="Resource" uid="uid://cnj7k31nxfag8" path="res://data/levels/level_0.tres" id="3_4t22s"]
[ext_resource type="Resource" uid="uid://cvwsr67y5u75o" path="res://data/tokens_config.tres" id="3_6iknq"]
[ext_resource type="Script" path="res://scripts/game_info.gd" id="3_8dctr"]
[ext_resource type="PackedScene" uid="uid://dqoc7lfl8mxw1" path="res://ui/panels/gameplay_ui.tscn" id="4_fpg8e"]
[ext_resource type="Script" path="res://scripts/tokens_helpers/token_instance_provider.gd" id="5_86bwx"]
[ext_resource type="PackedScene" uid="uid://cs3h2jmbb6qk7" path="res://scenes/objects/cell.tscn" id="6_h3m50"]
[ext_resource type="Script" path="res://scripts/tokens_helpers/token_data_provider.gd" id="7_cehjm"]
[ext_resource type="Script" path="res://scripts/combinations/combinator.gd" id="10_dfvt2"]

[node name="Gameplay" type="Node2D"]
script = ExtResource("1_gck8e")

[node name="GameInfo" type="Node" parent="."]
script = ExtResource("3_8dctr")
level_config = ExtResource("3_4t22s")

[node name="Combinator" type="Node" parent="."]
script = ExtResource("10_dfvt2")

[node name="TokenInstanceProvider" type="Node2D" parent="."]
script = ExtResource("5_86bwx")
token_scene = ExtResource("2_08wbk")

[node name="TokenDataProvider" type="Node" parent="."]
script = ExtResource("7_cehjm")
tokens_config = ExtResource("3_6iknq")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 599.0
offset_bottom = 980.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.219608, 0.776471, 0.866667, 1)

[node name="Board" parent="." instance=ExtResource("2_7sxhf")]
position = Vector2(304, 485)

[node name="GameplayUI" parent="." instance=ExtResource("4_fpg8e")]

[node name="SpawnTokenCell" parent="." instance=ExtResource("6_h3m50")]
position = Vector2(113, 186)

[node name="SaveTokenCell" parent="." instance=ExtResource("6_h3m50")]
position = Vector2(424, 181)

[connection signal="points_received" from="." to="GameplayUI" method="_on_gameplay_points_received"]
[connection signal="show_message" from="." to="GameplayUI" method="_on_gameplay_show_message"]
[connection signal="update_total_points" from="." to="GameplayUI" method="_on_gameplay_update_total_points"]
[connection signal="board_cell_moved" from="Board" to="." method="_on_board_board_cell_moved"]
[connection signal="board_cell_selected" from="Board" to="." method="_on_board_board_cell_selected"]
